# learners-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: llm.yaml
src/learners_mcp/: config.py  db.py  language.py  server.py
src/learners_mcp/export/: anki.py  artifacts.py  markdown.py  portable.py
src/learners_mcp/flashcards/: service.py  sm2.py
src/learners_mcp/ingestion/: background.py  chunker.py  loader.py  pipeline.py  splitter.py
src/learners_mcp/llm/: client.py  profiles.py  prompts.py  providers.py
src/learners_mcp/notes/: extractor.py
src/learners_mcp/orientation/: cross_material.py  generator.py  render.py
src/learners_mcp/study/: completion.py  context.py  evaluation.py  phases.py  plan.py  prereqs.py  progress.py  qa.py  rolling.py  streak.py
tests/: test_artifact_mirror.py  test_background.py  test_claude_launcher.py  test_completion_report.py  test_context_builder.py  test_db.py  test_exports.py  test_language_enforcement.py  test_language_policy.py  test_llm_defaults_still_work.py  test_llm_profiles.py  test_llm_providers.py  test_llm_reasoning_filter.py  test_loader_routing.py  test_phases.py  test_progress.py  test_regressions_v0_audit.py  test_regressions_v1_audit.py  test_regressions_v2_audit.py  test_server_entrypoint.py  test_server_smoke.py  test_sm2.py  test_splitter.py  test_tool_result_compaction.py  test_v2_cross_material.py  test_v2_evaluation.py  test_v2_plan.py  test_v2_portable.py  test_v2_prereqs.py  test_v2_streak.py
