[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learners-mcp"
version = "0.1.0"
description = "MCP server that guides learners through any material: orientation, notes, four-phase study loop, spaced repetition."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "litellm>=1.63.0,<2",
    "pyyaml>=6.0",
    "langchain-text-splitters>=0.3.0",
    "markitdown[all]>=0.0.1",
    "genanki>=0.13.0",
    "youtube-transcript-api>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
learners-mcp = "learners_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
